@@ -23,6 +23,9 @@ plugins {
     id "org.teavm" version "0.9.2"
 }
 
+sourceCompatibility = "21"
+targetCompatibility = "21"
+
 sourceSets {
     main {
         java {
@@ -111,10 +114,10 @@ dependencies {
     implementation 'commons-logging:commons-logging:1.3.4'
     implementation 'ca.weblite:java-objc-bridge:1.1'
     implementation 'org.json:json:20240303'
-    //implementation files('com/mojang/logging/1.5.10/logging-1.5.10.jar')
-    //implementation files('com/mojang/jtracy/1.0.29/jtracy-1.0.29.jar')
-    //implementation files('com/mojang/jtracy/1.0.29/jtracy-1.0.29-natives-windows.jar')
-    //implementation files('com/mojang/patchy/2.2.10/patchy-2.2.10.jar')
+    implementation files('com/mojang/logging/1.5.10/logging-1.5.10.jar')
+    implementation files('com/mojang/jtracy/1.0.29/jtracy-1.0.29.jar')
+    implementation files('com/mojang/jtracy/1.0.29/jtracy-1.0.29-natives-windows.jar')
+    implementation files('com/mojang/patchy/2.2.10/patchy-2.2.10.jar')
     // Lokale JARs (nur falls online nicht verfügbar)
     implementation files(
         'src/jars/org/lwjgl/lwjgl-glfw/3.3.3/lwjgl-glfw-3.3.3-natives-windows-x86.jar',
@@ -142,8 +145,8 @@ dependencies {
         'src/jars/org/lwjgl/lwjgl-openal/3.3.3/lwjgl-openal-3.3.3-natives-windows-x86.jar',
         'src/jars/org/lwjgl/lwjgl-openal/3.3.3/lwjgl-openal-3.3.3-natives-windows.jar',
         // Die folgenden JARs sind NICHT öffentlich verfügbar:
-        'src/jars/com/mojang/jtracy/1.0.29/jtracy-1.0.29.jar',
-        'src/jars/com/mojang/jtracy/1.0.29/jtracy-1.0.29-natives-windows.jar',
+        //'src/jars/com/mojang/jtracy/1.0.29/jtracy-1.0.29.jar',
+        //'src/jars/com/mojang/jtracy/1.0.29/jtracy-1.0.29-natives-windows.jar',
         'src/jars/com/mojang/patchy/2.2.10/patchy-2.2.10.jar',
         'src/jars/com/mojang/logging/1.5.10/logging-1.5.10.jar'
     )
@@ -151,6 +154,11 @@ dependencies {
 
 def folder = "javascript"
 def name = "classes.js"
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--enable-preview")
+    options.encoding = "UTF-8"
+}
 
 teavm.js {
     compileJava.options.encoding = "UTF-8"
